--- a/cordapp/build.gradle
+++ b/cordapp/build.gradle
@@ -1,3 +1,5 @@
+ext.okhttp_version = '3.5.0'
+
 repositories {
     mavenLocal()
     jcenter()
@@ -52,10 +54,8 @@ dependencies {
 
     testCompile "net.corda:corda-node-driver:$corda_release_version"
 
-    // CorDapp dependencies
-    // Specify your CorDapp's dependencies below, including dependent CorDapps.
-    // We've defined Cash as a dependent CorDapp as an example.
-    cordapp project(":cordapp-contracts-states")
+    // OkHTTP: A simple HTTP library.
+    compile "com.squareup.okhttp3:okhttp:$okhttp_version"
 }
 
 task integrationTest(type: Test, dependsOn: []) {
