--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
-    ext.corda_release_version = '1.0.0'
-    ext.corda_gradle_plugins_version = '1.0.0'
-    ext.kotlin_version = '1.1.4'
+    ext.corda_release_group = 'net.corda'
+    ext.corda_release_version = 'corda-3.0-RC01'
+    ext.corda_gradle_plugins_version = '3.0.8'
+    ext.kotlin_version = '1.1.60'
     ext.junit_version = '4.12'
-    ext.quasar_version = '0.7.6'
+    ext.quasar_version = '0.7.9'
     ext.okhttp_version = '3.5.0'
 
     repositories {
@@ -14,6 +15,7 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
     }
@@ -28,6 +30,7 @@ repositories {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
 
@@ -76,12 +79,10 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
     directory "./build/nodes"
-    networkMap "O=Controller,L=London,C=GB"
     node {
-        name "O=Controller,L=London,C=GB"
-        advertisedServices = ["corda.notary.validating"]
+        name "O=Notary,L=London,C=GB"
+        notary = [validating : true]
         p2pPort 10002
-        rpcPort 10003
         cordapps = [
                 "$project.group:cordapp-contracts-states:$project.version",
                 "$project.group:cordapp:$project.version",
@@ -90,9 +91,11 @@ task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
     }
     node {
         name "O=PartyA,L=London,C=GB"
-        advertisedServices = []
         p2pPort 10005
-        rpcPort 10006
+        rpcSettings {
+            address("localhost:10006")
+            adminAddress("localhost:10046")
+        }
         cordapps = [
                 "$project.group:cordapp-contracts-states:$project.version",
                 "$project.group:cordapp:$project.version",
